<resources>
    <string name="app_name">Android Project</string>
    <string name="api_key">tp1y0YmIDxAvckAUdmgBfOAGqmvAZfCC49j1DHd2</string>
    <string name="activity_search">Search</string>
    <string name="activity_recycler">RecyclerView</string>
    <string name="activity_photos">Photo Detail</string>
    <string name="activity_details">Item Details</string>
    <string name="activity_adaptive">Adaptive UI</string>
    <string name="hint">Keyword</string>
    <string name="textview">TextView</string>
    <string name="button">Button</string>
    <string name="first_launch">first_launch</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="change_layout_manager"> </string>
    <string name="logged_in">Login</string>
    <string name="logged_out">Logout</string>
    <string name="register">Register</string>
    <string name="password">Password:</string>
    <string name="email_id">Email Id:</string>

    <string name="activity_viewpager">View Pager With Fragment</string>
    <string name="prev_button_text">Prev</string>
    <string name="next_button_text">Next</string>
    <string name="title_activity_maps">Maps</string>
    <string name="google_maps_key">AIzaSyDzxurRIHsV7mCrAowton1fsS2Anqf-URs</string>
    <string name="layout_index">layout_index</string>

    <string name="mlkit_firebase">ML Kit with Firebase</string>
    <string name="camera_title">Camera</string>
    <string name="run_cloud_search">Run cloud search</string>
    <string name="select_image_for_text_recognition">Select image with @TwitterId for text recognition</string>

    <string name="material_design">Material Design</string>
    <string name="material_design_detail">Detail</string>
    <string name="description_login">User Login and Registration screens</string>
    <string name="show_as_list">Show as list</string>
    <string name="show_as_grid">Show as grid</string>
    <string name="md_detail">Detail</string>

    <string name="room_contacts">Contacts</string>
    <string name="new_contacts">New Contact</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone No</string>
    <string name="city">City</string>
    <string name="save_button">Save</string>

    <string name="maps_shortcut_short_label">Maps</string>
    <string name="maps_shortcut_long_label">Maps</string>
    <string name="maps_disabled_message">Maps</string>
    <string name="recycler_shortcut_short_label">Recycler</string>
    <string name="recycler_shortcut_long_label">Recycler</string>
    <string name="recycler_disabled_message">Recycler</string>

    <string name="animations_title">Animations</string>
    <string name="title_launch_rocket">Launch a rocket</string>
    <string name="title_spin_rocket">Spin a rocket</string>
    <string name="title_accelerate_rocket">Accelerate a rocket</string>
    <string name="title_launch_rocket_objectanimator">Launch a rocket (ObjectAnimator)</string>
    <string name="launch_spin">Launch and spin (AnimatorSet)</string>
    <string name="launch_spin_viewpropertyanimator">Launch and spin (ViewPropertyAnimator)</string>
    <string name="title_with_doge">Don\'t leave Doge behind (Animating two objects)</string>
    <string name="title_animation_events">Animation events (with listener)</string>
    <string name="title_there_and_back">Fly there and back (Animation options)</string>
    <string name="title_jump_and_blink">Jump and blink (Animations in XML)</string>
    <string name="title_color_animation">Background color</string>

    <string name="msg_playback_ended">playback ended</string>
    <string name="msg_playback_started">playback started</string>
    <string name="msg_playback_paused">playback paused</string>
    <string name="video_player_title">Video Player</string>
    <string name="title_activity_tabbar">TabbarActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="first_tab_fragment">Hello first tab fragment</string>
    <string name="second_tab_fragment">Hello second tab fragment</string>
    <string name="third_tab_fragment">Hello third tab fragment</string>


    <string name="photo_filters">Photo Filters</string>
    <string name="title_filters">Filters</string>
    <string name="title_edit">Edit</string>
    <string name="activity_title_main">Filters</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>
    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>
    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>
    <string name="appwidget_text">App Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="photo_image_view">PhotoImageView</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>

    <string name="previous">Previous</string>
    <string name="finish">Finish</string>
    <string name="finish_button">Finish</string>
    <string name="next">Next</string>
    <string name="onboarding_finished">Onboarding finished!</string>
    <string name="android_title">Android - The best platform ever! </string>
    <string name="android_description">This is only one of the awesome tutorials in the even more awesome series of Android tutorials. Learn about animations, frameworks, networking, and everything which Android does better than other platforms.</string>
    <string name="ios_title">iOS - We had to include this as well…</string>
    <string name="ios_description">One can argue that iOS is better than Android, but one would be wrong. Either way, we have iOS tutorials as well, but why would you read them over the Android ones? :]</string>
    <string name="unity_title">Unity - Games galore</string>
    <string name="unity_description">Unity really is fun. If you\'re looking to create some games, when you\'re not playing them, we have everything you need!</string>
    <string name="kotlin_title">Kotlin - The beautiful thing</string>
    <string name="kotlin_description">We all know Kotlin is just the best. Some might say that it\'s what programming languages should be. And they would be 100% korrect.</string>
    <string name="swift_title">Swift - The not so good Kotlin</string>
    <string name="swift_description">Swift is cool too. But not as cool as Kotlin, right? It\'s pretty similar to our beautiful, one of a kind, language, so you can learn it here as well.</string>

</resources>
