<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".room.NewContactFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/errorTextView"
            android:layout_width="346dp"
            android:layout_height="36dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/actor"
            android:gravity="center_horizontal"
            android:lines="2"
            android:text=""
            android:textAlignment="center"
            android:textAppearance="@style/myTheme.ActionBar.Text"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:gravity="center_vertical"
            android:text="@string/name"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/errorTextView" />

        <EditText
            android:id="@+id/nameEditText"
            android:hint="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nameTextView"
            app:layout_constraintTop_toTopOf="@+id/nameTextView" />

        <TextView
            android:id="@+id/phoneNoTextView"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:text="@string/phone_number"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

        <EditText
            android:id="@+id/phoneNoEditText"
            android:hint="@string/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="phone"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/phoneNoTextView"
            app:layout_constraintTop_toTopOf="@+id/phoneNoTextView" />

        <TextView
            android:id="@+id/cityTextView"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:gravity="center_vertical"
            android:text="@string/city"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phoneNoTextView" />

        <EditText
            android:id="@+id/cityEditText"
            android:hint="@string/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cityTextView"
            app:layout_constraintTop_toTopOf="@+id/cityTextView" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="224dp"
            android:layout_height="49dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="72dp"
            android:background="@drawable/round_corners_background_blue"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cityTextView" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>